--- a/swift-5.2/Dockerfile
+++ b/swift-5.2/Dockerfile
@@ -1,12 +1,6 @@
 FROM swift:5.2
 
 RUN apt-get update -y && \
-apt-get -y install wget rubygems ruby-all-dev
-
-RUN wget -O ruby-install-0.7.1.tar.gz https://github.com/postmodern/ruby-install/archive/v0.7.1.tar.gz && \
-tar -xzvf ruby-install-0.7.1.tar.gz && \
-cd ruby-install-0.7.1/ && \
-make install && \
-cd ..
+apt-get -y install wget rubygems
 
 RUN gem install bundler
